tests/bad/example-e15b.rat
fn BadArgs(x: fn (Int, Void) -> Void) -> Void {
  return;
}

fn Main () -> Void {
  return;
}